2006-07-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/operators.c (igraph_union_many) : free bug corrected

	* src/operators.c (igraph_disjoint_union, igraph_disjoint_union_many)
	(igraph_union, igraph_union_many, igraph_intersection)
	(igraph_intersection_many, igraph_difference, igraph_complementer)
	(igraph_compose) : const qualifiers added

2006-07-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/topology.c (igraph_isoclass, igraph_isoclass_subgraph) 
	(igraph_isoclass_create) : check for 3-4 size graph
	(igraph_isomorphic) : check for number of nodes/edges, needed to work
	properly

	* src/motifs.c (igraph_motifs_randesu_estimate) : slight changes 
	in parameters, parsample can be null pointer

	* src/foreign.c (igraph_read_graph_pajek) : drop 'attr' argument
	* src/foreign-pajek-parser.y (igraph_i_pajek_attr) : removed
	* examples/simple/foreign.c : updated

2006-07-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/type_indexededgelist.c (igraph_delete_edges) : rewritten to
	use edge set as parameter
	* src/structural_properties.c (igraph_rewire, igraph_simplify) :
	updated
	* examples/simple/igraph_delete_edges.c : updated

	* src/iterators.c (igraph_i_eit_pairs, igraph_eit_create) : checks 
	added

	* src/iterators.c (igraph_vs_as_vector, igraph_vit_as_vector)
	(igraph_es_as_vector, igraph_eit_as_vector) : added

	* src/iterators.c (igraph_i_eit_path) : length bug corrected
	
2006-07-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/type_indexededgelist.c (igraph_get_eid) : added
	* examples/simple/igraph_get_eid.c : added

	* src/iterators.c (igraph_es_pairs, igraph_es_pairs_small)
	(igraph_es_path, igraph_es_path_small, igraph_i_eit_pairs)
	(igraph_i_eit_path) : added
	(igraph_es_destroy, igraph_eit_create) : added PAIRS and PATH
	* examples/simple/igraph_es_pairs.c : added
	* examples/simple/igraph_es_path.c : added

	* src/igraph.h (igraph_es_t) : 'path' data type added
	* src/type_indexededgelist.c (igraph_get_eid) : 'directed' option added