@@ -1,0 +1,10 @@
+0 1
+1 2
+1 2
+0 0
+1 2
+1 1
+2 3
+3 2
+3 4
+3 2
