@@ -73,3 +73,8 @@ AT_SETUP([Cocitation and bibcoupling (igraph_cocitation,igraph_bibcoupling):])
 AT_KEYWORDS([cocitation bibliographic coupling])
 AT_COMPILE_CHECK([simple/igraph_cocitation.c], [simple/igraph_cocitation.out])
 AT_CLEANUP
+
+AT_SETUP([Simplification of non-simple graphs (igraph_simplify): ])
+AT_KEYWORDS([simplify multiple edge loop edges non-simple graphs simple graphs])
+AT_COMPILE_CHECK([simple/igraph_simplify.c], [simple/igraph_simplify.out])
+AT_CLEANUP
